# sync_clipboard_rs

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  build_log.txt
.github/: dependabot.yml
.github/workflows/: build.yml  docker.yml  release.yml
cli/: Cargo.toml
cli/src/: main.rs
clipboard_core/: Cargo.toml
clipboard_core/src/: clipboard.rs  clipboard_handler.rs  config.rs  crypto.rs  lib.rs  mobile_api.rs  sync.rs
clipboard_core/src/discovery/: cache.rs  mod.rs  multicast.rs  service.rs  types.rs
desktop/: Cargo.toml  tauri.conf.json
desktop/icons/: icon.icns
desktop/src/: build_info.rs  lib.rs  main.rs
docs/: CHANGELOG.md  README_EN.md  deployment.md  development_log.md
server/: Cargo.toml
server/src/: auth.rs  client_tracker.rs  db.rs  file_handlers.rs  handlers.rs  lib.rs  main.rs  tracking_middleware.rs  webdav.rs
server/tests/: api_test.rs  api_test_refactored.rs  cleanup_test.rs  e2ee_test.rs  error_handling_test.rs  large_file_test.rs  rich_text_test.rs  tls_test.rs  webdav_test.rs
server/tests/common/: mod.rs
ui/: index.html  package-lock.json  package.json  pnpm-lock.yaml
ui/src/: App.tsx  i18n.ts  main.tsx  types.ts
ui/src/components/: About.tsx  History.tsx  Network.tsx  Settings.tsx
