[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
reqwest = { version = "0.13", features = ["json"] }
tokio = { version = "1", features = ["full"] }
clipboard_core = { path = "../clipboard_core" }
uuid = "1.20.0"
image = "0.25.9"
