[package]
name = "clipboard_core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rdev = "0.5"          # Global hotkeys (check compatibility)
tokio = { version = "1", features = ["full"] }
thiserror = "2.0"
anyhow = "1.0"
config = "0.15.19"
reqwest = { version = "0.13", features = ["json", "stream"] }
tracing = "0.1"
uuid = { version = "1.19.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
image = "0.25.9"
sha2 = "0.10.9"
hex = "0.4.3"
aes-gcm = "0.10.3"
pbkdf2 = "0.12.2"
rand = "0.9.2"
base64 = "0.22.1"
tokio-util = { version = "0.7.18", features = ["io"] }
clipboard-rs = "0.3.1"
uniffi = { version = "0.31.0", features = ["cli"] }
hostname = "0.4.2"
socket2 = { version = "0.5", features = ["all"] }
local-ip-address = "0.6.9"
toml = "0.8"