[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
config = "0.15.19"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio-util = { version = "0.7", features = ["io"] }
futures-util = "0.3"
clipboard_core = { path = "../clipboard_core" }
rusqlite = { version = "0.38.0", features = ["bundled"] }
dav-server = "0.10.0"
headers = "0.4.1"
axum-server = { version = "0.8.0", features = ["tls-rustls"] }
mdns-sd = "0.17.1"
tower-http = { version = "0.6", features = ["trace"] }
hostname = "0.4"

[dev-dependencies]
base64 = "0.22.1"
hex = "0.4.3"
reqwest = { version = "0.13", features = ["json", "stream"] }
sha2 = "0.10.9"
tokio = { version = "1", features = ["full"] }
tempfile = "3.25"
urlencoding = "2.1"
